# TypeDuck-Windows

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  INSTALL.md  README.md  THIRD_PARTY_NOTICES.txt  TODO.md  backends.json  build.bat  env.bat.template  env.vs2019.bat  env.vs2022.bat  github.install.bat  install_boost.bat  weasel.props.template  weasel.sln  xbuild.bat  xmake.lua
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
MoqLauncher/: BackendServer.cpp  BackendServer.h  CMakeLists.txt  MoqiLauncher.rc  PipeClient.cpp  PipeClient.h  PipeSecurity.cpp  PipeServer.cpp  PipeServer.h  TypeDuckPreferences.cpp  TypeDuckPreferences.h  Utils.cpp  Utils.h  version.rc.in
MoqiTextService/: CMakeLists.txt  DllEntry.cpp  MoqiCandidateWindow.cpp  MoqiCandidateWindow.h  MoqiClient.cpp  MoqiClient.h  MoqiImeModule.cpp  MoqiTextService.cpp  MoqiTextService.def  MoqiTextService.h  MoqiTextService.rc.in  TsfLog.cpp  TypeDuckCandidateInfo.cpp  TypeDuckCandidateInfo.h  TypeDuckProfile.cpp  TypeDuckProfile.h  resource.h
Preview/: CMakeLists.txt  main.cpp
PyWeasel/: PyWeasel.cpp  PyWeasel.vcxproj  PyWeasel.vcxproj.filters  stdafx.cpp  stdafx.h
RimeWithWeasel/: RimeWithWeasel.cpp  RimeWithWeasel.vcxproj  RimeWithWeasel.vcxproj.filters  WeaselUtility.cpp  stdafx.cpp  stdafx.h  xmake.lua
SetupHelper/: CMakeLists.txt  SetupHelper.cpp  SetupHelper.rc
Tests/TypeDuckCandidateData/: CMakeLists.txt  TypeDuckCandidateInfo_test.cpp
Tests/TypeDuckProtocol/: CMakeLists.txt  ProtoFraming_test.cpp  ProtocolRecovery_test.cpp
Tests/TypeDuckSettings/: CMakeLists.txt  TypeDuckPreferences_test.cpp
Tools/TypeduckBackendProbe/: CMakeLists.txt  main.cpp
TypeDuckSettings/: CMakeLists.txt  TypeDuckAbout.rc  TypeDuckAboutDialog.cpp  TypeDuckAboutDialog.h  TypeDuckAboutMain.cpp  TypeDuckAboutVersion.rc.in  TypeDuckSettings.rc  TypeDuckSettingsVersion.h.in  TypeDuckSettingsVersion.rc.in  TypeDuckSettingsWindow.cpp  TypeDuckSettingsWindow.h  main.cpp  resource.h
WeaselDeployer/: AboutDialog.cpp  AboutDialog.h  Configurator.cpp  Configurator.h  DictManagementDialog.cpp  DictManagementDialog.h  HintSettings.cpp  HintSettings.h  HintSettingsDialog.cpp  HintSettingsDialog.h  SwitcherSettingsDialog.cpp  SwitcherSettingsDialog.h  TypeDuckSettings.cpp  TypeDuckSettings.h  TypeDuckSettingsDialog.cpp  TypeDuckSettingsDialog.h  UIStyleSettings.cpp  UIStyleSettings.h  UIStyleSettingsDialog.cpp  UIStyleSettingsDialog.h  WeaselDeployer.cpp  WeaselDeployer.h  WeaselDeployer.rc  WeaselDeployer.vcxproj  WeaselDeployer.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h  xmake.lua
WeaselIME/: KeyEvent.cpp  KeyEvent.h  WeaselIME.cpp  WeaselIME.h  WeaselIME.rc  WeaselIME.vcxproj  WeaselIME.vcxproj.filters  dllmain.cpp  ime.cpp  immdev.h  resource.h  stdafx.cpp  stdafx.h  xmake.lua
WeaselIPC/: ActionLoader.cpp  ActionLoader.h  Committer.cpp  Committer.h  Configurator.cpp  Configurator.h  ContextUpdater.cpp  ContextUpdater.h  Deserializer.cpp  Deserializer.h  PipeChannel.cpp  ResponseParser.cpp  Styler.cpp  Styler.h  WeaselClientImpl.cpp  WeaselClientImpl.h  WeaselIPC.vcxproj  WeaselIPC.vcxproj.filters  stdafx.cpp  stdafx.h  xmake.lua
WeaselIPCServer/: SecurityAttribute.cpp  SecurityAttribute.h  WeaselIPCServer.vcxproj  WeaselIPCServer.vcxproj.filters  WeaselServerImpl.cpp  WeaselServerImpl.h  stdafx.cpp  stdafx.h  targetver.h  xmake.lua
WeaselServer/: SystemTraySDK.cpp  SystemTraySDK.h  WeaselServer.cpp  WeaselServer.h  WeaselServer.rc  WeaselServer.vcxproj  WeaselServer.vcxproj.filters  WeaselServerApp.cpp  WeaselServerApp.h  WeaselService.cpp  WeaselService.h  WeaselTrayIcon.cpp  WeaselTrayIcon.h  resource.h  stdafx.cpp  stdafx.h  xmake.lua
WeaselSetup/: InstallOptionsDlg.cpp  InstallOptionsDlg.h  WeaselSetup.cpp  WeaselSetup.h  WeaselSetup.rc  WeaselSetup.vcxproj  WeaselSetup.vcxproj.filters  imesetup.cpp  resource.h  stdafx.cpp  stdafx.h  xmake.lua
WeaselTSF/: CandidateList.cpp  CandidateList.h  Compartment.cpp  Compartment.h  Composition.cpp  DisplayAttribute.cpp  DisplayAttributeInfo.cpp  DisplayAttributeInfo.h  DisplayAttributeProvider.cpp  EditSession.cpp  EditSession.h  EnumDisplayAttributeInfo.cpp  EnumDisplayAttributeInfo.h  Globals.cpp  Globals.h  KeyEvent.cpp  KeyEvent.h  KeyEventSink.cpp  LanguageBar.cpp  LanguageBar.h  Register.cpp  Register.h  Server.cpp  TextEditSink.cpp  ThreadMgrEventSink.cpp  WeaselTSF.cpp  WeaselTSF.h  WeaselTSF.rc  WeaselTSF.vcxproj  WeaselTSF.vcxproj.filters  ctffunc.h  dllmain.cpp  resource.h  stdafx.cpp  stdafx.h  targetver.h  xmake.lua
WeaselUI/: DirectWriteResources.cpp  FullScreenLayout.cpp  FullScreenLayout.h  GdiplusBlur.cpp  GdiplusBlur.h  HorizontalLayout.cpp  HorizontalLayout.h  Layout.cpp  Layout.h  MultiHintPanel.cpp  MultiHintPanel.h  StandardLayout.cpp  StandardLayout.h  VHorizontalLayout.cpp  VHorizontalLayout.h  VerticalLayout.cpp  VerticalLayout.h  WeaselPanel.cpp  WeaselPanel.h  WeaselUI.cpp  WeaselUI.vcxproj  WeaselUI.vcxproj.filters  fontClasses.cpp  fontClasses.h  stdafx.cpp  stdafx.h  targetver.h  utils.h  xmake.lua
arm64x_wrapper/: WeaselIME_arm64.def  WeaselIME_x64.def  WeaselTSF_arm64.def  WeaselTSF_x64.def  build.bat
include/: PipeChannel.h  PyWeasel.h  ResponseParser.h  RimeWithWeasel.h  StringAlgorithm.hpp  VersionHelpers.hpp  WeaselCommon.h  WeaselConstants.h  WeaselIPC.h  WeaselUI.h  WeaselUtility.h  WeaselVersion.h  logging.h  no_logging.h  resource.h  winapifamily.h  winpackagefamily.h  winsparkle-version.h  winsparkle.h
installer/: MoqiTsf.iss  README.txt  build-installer.ps1
output/: install.nsi
proto/: ProtoFraming.h  moqi.pb.cc  moqi.pb.h  moqi.proto
scripts/: Apply-TypeDuckSubmodulePatches.ps1  Generate-ThirdPartyNotices.ps1  Invoke-TypeDuckEngineProof.ps1  Invoke-TypeDuckProtocolRecoveryProbe.ps1  Invoke-TypeDuckReleaseVerification.ps1  Invoke-TypeDuckTypingMvpProof.ps1  Invoke-TypeDuckVmInstallerVerification.ps1  Stage-TypeDuckRuntime.ps1  Test-TypeDuckAppearanceTheme.ps1  Test-TypeDuckBackendDiagnostics.ps1  Test-TypeDuckCandidateData.ps1  Test-TypeDuckCandidateWindow.ps1  _all_in_package.ps1  (+23 more)
(+219 files in other folders)
